@@ -1,3 +1,8 @@
+2007-10-15  Thiago Jung Bauermann  <bauerman@br.ibm.com>
+
+	* rs6000-tdep.c (skip_prologue): Restore comment with
+	function description to its proper place.
+
 2007-10-15  Daniel Jacobowitz  <dan@codesourcery.com>
 
 	* NEWS: Mention gdbserver PowerPC improvements.
